# KeyLogger-For-Windows

./: CMakeLists.txt  README.md  appveyor.yml  keylogger.sln
keylogger/: config.h  constants.h  keylogger.c  keylogger.h  keylogger.vcxproj  keylogger.vcxproj.filters  library.h  main.c  win32.c  win32.h
keylogger/util/: clipboard.c  clipboard.h  file.c  file.h  keyboard.c  keyboard.h  registry.c  registry.h
